--- a/samples/fddi/ChangeLog
+++ b/samples/fddi/ChangeLog
@@ -200,3 +200,5 @@ Dec 23, 1999
 Jan 25, 2000
   - ssm_ifs.cc updated because of cArray interface change
 ------ omnetpp-2.0b3 released ------
+Mar 12. 2000
+  - readme expanded with advice on PVM setup
