--- a/src/tkenv/ChangeLog
+++ b/src/tkenv/ChangeLog
@@ -335,3 +335,6 @@ Jan 17-18,2000
 Mar 26, 2000
  - 'char *' pointers made const-correct (lots of 'char *' --> 'const char *'
    replacements throughout the code)
+April 4, 2000
+ - dynamic registration of user interface (TOmnetApp) classes introduced:
+   Register_OmnetApp() macro added to tkapp.cc
