--- a/src/envir/ChangeLog
+++ b/src/envir/ChangeLog
@@ -224,3 +224,5 @@ April 4, 2000
    on Windows: envir.dll, tkenv.dll, cmdenv.dll).
    See appreg.h, the Register_OmnetApp macros in cmdenv.cc and tkapp.cc,
    and the chooseBestOmnetApp() function in envir.cc.
+April 6, 2000
+ - changes to enable linking a Windows DLL from the library
