--- a/src/tkenv/ChangeLog
+++ b/src/tkenv/ChangeLog
@@ -338,3 +338,5 @@ Mar 26, 2000
 April 4, 2000
  - dynamic registration of user interface (TOmnetApp) classes introduced:
    Register_OmnetApp() macro added to tkapp.cc
+April 6, 2000
+ - changes to enable linking a Windows DLL from the library
