--- a/src/envir/ChangeLog
+++ b/src/envir/ChangeLog
@@ -224,7 +224,22 @@ April 4, 2000
    on Windows: envir.dll, tkenv.dll, cmdenv.dll).
    See appreg.h, the Register_OmnetApp macros in cmdenv.cc and tkapp.cc,
    and the chooseBestOmnetApp() function in envir.cc.
-April 6, 2000
+April 6-10, 2000
  - changes to enable linking a Windows DLL from the library
-April 8, 2000
- - added bool TOmnetApp::memoryIsLow()
+ - the memoryIsLow() utility function was placed into this library, and now
+   it works through a new TOmnetApp::memoryIsLow() function.
+ - the "-u <user-interface>" command-line parameter is now understood by envir:
+   this can be used to select the user interface if both Cmnenv and Tkenv is
+   linked in (or is dynamically loaded).
+   The [General]/user-interface= ini file option was also added, with the same
+   functionality.
+   This allows the user to link the simulation without Cmdenv and Tkenv, and
+   load one of them at runtime, with a line like this in omnetpp.ini:
+       [General]
+       load-libs=../../lib/tkenv.so
+       user-interface=Tkenv
+   Or the command-line equivalent:
+       mysim  -l ../../lib/tkenv.so  -u Tkenv
+   To allow all the above, the setup procedure (cEnvir::setup()) and
+   the constructor and the setup() function of TOmnetApp was reorganized.
+
