--- a/src/tkenv/ChangeLog
+++ b/src/tkenv/ChangeLog
@@ -335,8 +335,11 @@ Jan 17-18,2000
 Mar 26, 2000
  - 'char *' pointers made const-correct (lots of 'char *' --> 'const char *'
    replacements throughout the code)
-April 4, 2000
+April 4-10, 2000
  - dynamic registration of user interface (TOmnetApp) classes introduced:
    Register_OmnetApp() macro added to tkapp.cc
-April 6, 2000
  - changes to enable linking a Windows DLL from the library
+ - adjustments because of TOmnetApp constructor changes
+ - added tkenvDummy()/envirDummy(): functions which can/should be called from
+   Envir in order to force the linker to include the Tkenv library into the
+   executable. (These functions do absolutely nothing.)
