--- a/src/utils/ChangeLog
+++ b/src/utils/ChangeLog
@@ -95,3 +95,5 @@ Oct 10, 1999
 Dec 5,1999
   - Makefile.vc added
 ------ omnetpp-2.0b3 released ------
+Apr 10, 2000
+ - TRUE/FALSE (defines) replaced by true/false (C++ keywords)
