--- a/src/gned/ChangeLog
+++ b/src/gned/ChangeLog
@@ -193,3 +193,5 @@ Dec 19, 1999
 ------ omnetpp-2.0b3 released ------
 Mar 27, 2000
  - bugfix: conditional (?:) operator caused parse error [reported by Niko]
+Apr 10, 2000
+ - in the C++ sources, TRUE/FALSE (defines) replaced by true/false (C++ keywords)
