--- a/src/nedc/ChangeLog
+++ b/src/nedc/ChangeLog
@@ -261,3 +261,5 @@ Mar 27, 2000
 Apr 5, 2000
  - bugfix: nedc hung if last line was a comment and it was incomplete
    (without LF)  [reported by Roland Bless]
+Apr 10, 2000
+ - TRUE/FALSE (defines) replaced by true/false (C++ keywords)
