--- a/src/gned/ChangeLog
+++ b/src/gned/ChangeLog
@@ -196,5 +196,6 @@ Mar 27, 2000
 Apr 10, 2000
  - in the C++ sources, TRUE/FALSE (defines) replaced by true/false (C++ keywords)
  - in printf() statements, all "%lf","%lg","%le" was replaced by "%f","%g","%e"
-
-
+Apr 13, 2000
+ - ebnf.y: changed operator precedence to bind ||,&& thighter than ?:
+   [suggested by Niko]
