--- a/src/sim/ChangeLog
+++ b/src/sim/ChangeLog
@@ -865,4 +865,9 @@ May 5, 2000
    parser/assembler object to be able to easily change specific values within
    the display string without bothering the rest of it. Maybe for the some
    next version; but if you want to contribute one, go ahead :-)
+May 6, 2000
+ - further char * --> const char * changes
+ - displayString() added to cMessage. By default it returns an empty string;
+   users have to subclass cMessage and redefine displayString() to get
+   messages with custom appearance in Tkenv.
 
