*** empty log message ***

--- a/src/sim/ChangeLog
+++ b/src/sim/ChangeLog
@@ -869,5 +869,5 @@ May 6, 2000
  - further char * --> const char * changes
  - displayString() added to cMessage. By default it returns an empty string;
    users have to subclass cMessage and redefine displayString() to get
-   messages with custom appearance in Tkenv.
+   messages with custom appearance in Tkenv. (Not implemented yet in Tkenv!)
 
