--- a/src/sim/ChangeLog
+++ b/src/sim/ChangeLog
@@ -875,3 +875,5 @@ May 7, 2000
 May 19, 2000
  - fixed a bug in cSimulation::snapshot() which caused segfault if snapshot()
    was called with no 'label' parameter (reported by Gy. Pongor)
+ - fixed a bug which caused double printing of the distribution data in
+   histogram classes when snapshot() was called
